[project]
name = "frameloop"
version = "0.1.0"
description = "CLI tool for running Replicate AI models"
requires-python = ">=3.11,<3.14"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "replicate>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
frameloop = "frameloop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
]
