[project]
name = "frameloop"
version = "0.1.0"
description = "CLI tool for running Replicate AI models"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "rich",
    "replicate",
    "httpx",
    "questionary",
]

[project.scripts]
frameloop = "frameloop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff",
]
